# rhmc-jax

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: hmc_2d_gaussians.ipynb  reflection_algorithm_in_detail.ipynb  rhmc_2d_Lc2pKpi.ipynb  rhmc_8d_ttbar.py  rhmc_example.ipynb
rhmcjax/rhmc/: intersection_with_boundary.py  rhmc.py
rhmcjax/targets/: Lc2pKpi.py  Lc2pKpi_model.pkl  gaussians_on_circle.py  gaussians_on_circle_test.ipynb  madjax_target.py  target_util.py
rhmcjax/targets/madjax_ee_to_ttbar_wb/: __init__.py
rhmcjax/targets/madjax_ee_to_ttbar_wb/model/: aloha_methods.py  parameters.py
rhmcjax/targets/madjax_ee_to_ttbar_wb/processes/: all_processes.py
rhmcjax/tests/: test_intersection_with_boundary.py  test_madjax_target.py  test_minimal_example.py  test_reflection_velocity_verlet.py  test_target_Lc2pKpi.ipynb  test_target_gaussians_on_circle.ipynb
